# epd_onnxruntime_vendor

./: CMakeLists.txt  epd_onnxruntime_vendor-extras.cmake.in  package.xml
.github/workflows/: build.yml
env_hook/: epd_onnxruntime_vendor_library_path.sh
